--- a/EventPlanner/src/app/chat/chat/chat.component.html
+++ b/EventPlanner/src/app/chat/chat/chat.component.html
@@ -1,19 +1,20 @@
 <div class="chat-container">
   <div class="chat-list">
-    <input
-      type="text"
-      placeholder="Search"
-      class="search-input"
-      (input)="loadData()"
-    />
+    <!-- Search input field -->
+    <mat-form-field class="search-input">
+      <mat-label>Search</mat-label>
+      <input matInput [(ngModel)]="searchQuery" (input)="filterChats()" placeholder="Search">
+    </mat-form-field>
     <ul>
       <li
-        *ngFor="let chat of chats"
+        *ngFor="let chat of filteredChats"
         [class.selected]="chat.id === selectedChatId"
         (click)="loadMessages(chat.id)"
       >
         <div class="chat-item">
-          <h3>{{ loggedUser?.firstName != chat.user1 ? chat.user1 : chat.user2 }} <span *ngIf="getUnseenMessageCount(chat.id) > 0" class="notification-badge">{{ getUnseenMessageCount(chat.id) }} </span> </h3>
+          <h3>{{ loggedUser?.firstName != chat.user1 ? chat.user1 : chat.user2 }} 
+            <span *ngIf="getUnseenMessageCount(chat.id) > 0" class="notification-badge">{{ getUnseenMessageCount(chat.id) }} </span>
+          </h3>
           <p *ngIf="chat.isDeleted">This chat has been deleted.</p>
           {{ lastMessages[chat.id]?.content || 'No messages yet...' }}
         </div>
@@ -22,6 +23,10 @@
   </div>
 
   <div class="chat-window" *ngIf="selectedChatId">
+    <div class="user-chat">
+      <span>USER</span>
+    </div>
+
     <div class="messages">
       <div
         *ngFor="let message of messages"
