--- a/EventPlanner/src/app/details/service-details/service-details.component.html
+++ b/EventPlanner/src/app/details/service-details/service-details.component.html
@@ -102,7 +102,7 @@
     </div>
     
     <div class="actions">
-      <a>Visit Provider</a>
+      <p class="chat" (click)="chat()">You need more info? <br> Chat with us</p>
       <button mat-button class="buy-btn" (click)="bookService(service.id)">Book a service
         <mat-icon>
           shopping_cart
