--- a/EventPlanner/src/app/details/product-details/product-details.component.html
+++ b/EventPlanner/src/app/details/product-details/product-details.component.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="actions">
-      <a>Visit Provider</a>
+      <p class="chat" (click)="chat()">You need more info? <br> Chat with us</p>
       <button mat-button class="buy-btn" (click)="openBuyProductDialog()">Buy Product
         <mat-icon>
           shopping_cart
