--- a/EventPlanner/src/app/chat/chat/chat.component.css
+++ b/EventPlanner/src/app/chat/chat/chat.component.css
@@ -7,17 +7,39 @@
 .chat-list {
   width: 25em;
   background-color: #2C3E50;
-  color: white;
+  color: #ececec;
   padding: 1rem;
   overflow-y: auto;
 }
 
-.chat-list .search-input {
+.search-input {
+  margin: 3em 0 1em 0;
   width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border-radius: 4px;
-  border: 1px solid #ccc;
+}
+
+.search-input mat-form-field {
+  width: 100%;
+  background-color: #2C3E50;
+  padding: 0 0.5rem;
+}
+
+.search-input mat-label {
+  color: white;
+  font-size: 1em;
+}
+
+.search-input mat-mdc-input-element {
+  color: white;
+}
+
+.search-input mat-form-field .mat-icon {
+  color: white;
+  margin-right: 0.5rem;
+}
+
+.search-input input {
+  color: white;
+  font-size: 1em;
 }
 
 .chat-list ul {
@@ -31,6 +53,8 @@
   border-bottom: 1px solid #273849;
   border-radius: 0.5em;
   transition: background-color 0.3s ease;
+  margin-bottom: 0.5em;
+  overflow: hidden;
 }
 
 .chat-list li:hover {
@@ -46,7 +70,50 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  background-color: #ececec;
+  background: linear-gradient(-30deg, #374d5b, #A29BFE);
+}
+
+.messages-logo {
+  font-family: "Merriweather", serif;
+  font-size: 2em;
+  padding: 0.3em;
+  color: #A29BFE;
+}
+
+.chat {
+  padding: 1em !important;
+}
+
+.chat-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-field {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.user-image {
+  height: 3em;
+  width: 3em;
+  border-radius: 100%;
+}
+
+.user-name {
+  display: flex;
+  gap: 1em;
+  font-size: 1.1em;
+}
+
+.last-message {
+  font-size: 0.9em;
+  font-weight: 400;
+}
+
+.date {
+  font-size: 0.9em;
 }
 
 .messages {
@@ -54,16 +121,29 @@
   flex-direction: column-reverse;
   overflow-y: scroll;
   display: flex;
-  padding: 0 10em;
+  font-family: "Raleway", serif;
+  padding: 1em 10em;
+  scrollbar-width: none;
 }
 
 .messages div {
-  margin-bottom: 0.2rem;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  word-wrap: break-word;
   display: flex;
   justify-content: flex-start;
+  margin-bottom: 0.2rem;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.5em;
+  gap: 0.5em;
+}
+
+.message-content {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+
+.message-time {
+  display: flex;
+  align-items: flex-end;
+  font-size: 0.7em;
 }
 
 .messages .sent {
@@ -81,14 +161,28 @@
 
 .user-chat {
   display: flex;
-  padding: 1rem;
-  font-size: 30px;
+  cursor: pointer;
+  padding: 0.2em 0.5em;
   background-color: white;
+}
+
+.user-chat-image {
+  height: 4em;
+  width: 4em;
+  border-radius: 100%;
+}
+
+.user-chat-name {
+  display: flex;
+  align-items: center;
+  padding: 0.3em 0 0 0.3em;
+  font-size: 2em;
+  font-family: "Merriweather", serif;
 }
 
 .message-input {
   display: flex;
-  padding: 1rem;
+  padding: 0.7rem;
   margin-top: 1em;
   background-color: white;
 }
@@ -102,7 +196,6 @@
 }
 
 .message-input button {
-  padding: 0.5rem 1rem;
   background-color: #A29BFE;
   color: white;
   border: none;
