--- a/EventPlanner/src/app/chat/chat/chat.component.html
+++ b/EventPlanner/src/app/chat/chat/chat.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="chat-window" *ngIf="selectedChatId">
-    <div class="user-chat">
+    <div class="user-chat" (click)="goToUserProfile(selectedChatId)">
       <img class="user-image" [src]="getUserPictureInChat(selectedChatId) || '../../assets/images/profile_photo_placeholder.png'" alt="User Image" />
       <p class="user-chat-name m-0">{{ getUserInChat(selectedChatId) }}</p>
     </div>
