--- a/EventPlanner/src/app/event-manager/edit-event/edit-event.component.css
+++ b/EventPlanner/src/app/event-manager/edit-event/edit-event.component.css
@@ -207,7 +207,7 @@ button.cancel:hover {
   margin-top: 16px;
 }
 
-.image-picker-buttons .submit {
+.submit {
   padding: 8px 16px;
   font-size: 14px;
 }
