--- a/EventPlanner/src/app/event-manager/create-event/create-event.component.css
+++ b/EventPlanner/src/app/event-manager/create-event/create-event.component.css
@@ -42,7 +42,7 @@ mat-error {
     width: 100%;
     max-height: 90vh;
     overflow-y: auto;
-    padding: 1rem; 
+    padding: 1rem;
 }
 
 .form-title {
@@ -167,47 +167,48 @@ button.cancel:hover {
 }
 
 .role-section {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
 }
 
 .radio-group {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 .radio-group label {
-  font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
 }
 
-.radio-group input[type='radio'] {
-  margin-right: 0.5rem;
-  transform: scale(1.5);
+.radio-group input[type="radio"] {
+    margin-right: 0.5rem;
+    transform: scale(1.5);
 }
 
-#roleIcon, #roleLabel {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+#roleIcon,
+#roleLabel {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .buttons {
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-  margin-top: 16px;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin-top: 16px;
 }
 
-.image-picker-buttons .submit {
-  padding: 8px 16px;
-  font-size: 14px;
+.submit {
+    padding: 8px 16px;
+    font-size: 14px;
 }
