--- a/EventPlanner/src/app/details/product-details/product-details.component.html
+++ b/EventPlanner/src/app/details/product-details/product-details.component.html
@@ -1,102 +1,132 @@
 <div *ngIf="isBlocked" class="block-dialog">
-  <div class="dialog-container">
-    <div class="dialog-header">
-      <h2>Content Unavailable</h2>
-      <button class="close-btn" (click)="goBack()">×</button>
+    <div class="dialog-container">
+        <div class="dialog-header">
+            <h2>Content Unavailable</h2>
+            <button class="close-btn" (click)="goBack()">×</button>
+        </div>
+        <div class="dialog-content">
+            <p>
+                This product is unavailable because you have blocked the
+                provider. If you believe this is an error, please contact
+                support
+                <a
+                    href="mailto:eventplannerteam18@gmail.com"
+                    style="color: #a29bfe"
+                    >here</a
+                >.
+            </p>
+        </div>
+        <div class="dialog-actions">
+            <button (click)="goBack()">Go Back</button>
+        </div>
     </div>
-    <div class="dialog-content">
-      <p>
-        This product is unavailable because you have blocked the provider.
-        If you believe this is an error, please contact support
-        <a href="mailto:eventplannerteam18@gmail.com" style="color: #a29bfe;">here</a>.
-      </p>
-    </div>
-    <div class="dialog-actions">
-      <button (click)="goBack()">Go Back</button>
-    </div>
-  </div>
 </div>
 
 <div class="product-details-container" *ngIf="!isBlocked && product">
-  <div class="product-image-gallery">
-    <div class="swiper-container" [style.transform]="'translateX(' + swiperOffset + '%)'">
-      <ng-container *ngFor="let image of product.images; let i = index">
-        <div 
-          class="image-item" 
-          [ngClass]="{
-            'focused': i === currentIndex, 
-            'adjacent': i === currentIndex - 1 || i === currentIndex + 1
-          }"
+    <div class="product-image-gallery">
+        <div
+            class="swiper-container"
+            [style.transform]="'translateX(' + swiperOffset + '%)'"
         >
-          <img [src]="image" alt="Product Image" class="carousel-image" />
+            <ng-container *ngFor="let image of product.images; let i = index">
+                <div
+                    class="image-item"
+                    [ngClass]="{
+                        focused: i === currentIndex,
+                        adjacent:
+                            i === currentIndex - 1 || i === currentIndex + 1
+                    }"
+                >
+                    <img
+                        [src]="image"
+                        alt="Product Image"
+                        class="carousel-image"
+                    />
+                </div>
+            </ng-container>
         </div>
-      </ng-container>
+
+        <button class="swiper-button-prev" (click)="prevImage()">
+            <mat-icon>arrow_back</mat-icon>
+        </button>
+        <button class="swiper-button-next" (click)="nextImage()">
+            <mat-icon>arrow_forward</mat-icon>
+        </button>
+
+        <div class="bullets">
+            <span
+                *ngFor="let image of product.images; let i = index"
+                [class.active]="i === currentIndex"
+                (click)="goToImage(i)"
+            ></span>
+        </div>
     </div>
 
-    <button class="swiper-button-prev" (click)="prevImage()">
-      <mat-icon>arrow_back</mat-icon>
-    </button>
-    <button class="swiper-button-next" (click)="nextImage()">
-      <mat-icon>arrow_forward</mat-icon>
-    </button>
+    <div class="product-info">
+        <div class="header">
+            <div class="header-words">
+                <h3 class="m-0">{{ product.name }}</h3>
+                <span *ngIf="product.isAvailable" class="pt-2"
+                    >(Available)</span
+                >
+                <span *ngIf="!product.isAvailable">(Unavailable)</span>
+            </div>
+            <button mat-fab class="favourite">
+                <mat-icon>favorite</mat-icon>
+            </button>
+        </div>
+        <div class="rating">
+            <span>{{ calculateRating() }}</span>
+            <span class="reviews">({{ reviews }} reviews)</span>
+            <button mat-button class="contact-btn" (click)="comments()">
+                <mat-icon>chat</mat-icon>
+            </button>
+        </div>
 
-    <div class="bullets">
-      <span *ngFor="let image of product.images; let i = index" [class.active]="i === currentIndex" (click)="goToImage(i)"></span>
+        <p class="product-item">
+            <span>Description: </span> {{ product.description }}
+        </p>
+        <hr />
+
+        <p class="product-item">
+            <span>Category: </span> {{ product.category }}
+        </p>
+        <hr />
+
+        <p class="product-item">
+            <span>Event Types: </span> {{ getEventTypes() }}
+        </p>
+        <hr />
+
+        <p class="product-item">
+            <span>Location: </span> {{ product.location }}
+        </p>
+        <hr />
+
+        <div class="product-price">
+            <span>Price: </span>
+            <span class="price" *ngIf="product.discount > 0">
+                <del>{{ product.price | currency }}</del>
+                {{ product.price - product.discount | currency }}
+            </span>
+            <span class="price" *ngIf="product.discount === 0">
+                {{ product.price | currency }}
+            </span>
+        </div>
+
+        <div class="actions">
+            <p class="chat" (click)="chat()">
+                You need more info? <br />
+                Chat with us
+            </p>
+            <button mat-button class="buy-btn" (click)="openBuyProductDialog()">
+                Buy Product
+                <mat-icon> shopping_cart </mat-icon>
+            </button>
+        </div>
     </div>
-  </div>
-
-  <div class="product-info">
-    <div class="header">
-      <div class="header-words">
-        <h3 class="m-0">{{ product.name }}</h3>
-          <span *ngIf="product.isAvailable" class="pt-2">(Available)</span>
-          <span *ngIf="!product.isAvailable">(Unavailable)</span>
-      </div>
-      <button mat-fab class="favourite">
-        <mat-icon>favorite</mat-icon>
-      </button>
-    </div>
-    <div class="rating">
-      <span>⭐⭐⭐⭐⭐</span>
-      <span class="reviews">(42 reviews)</span>
-      <button mat-button class="contact-btn">
-        <mat-icon>chat</mat-icon>
-      </button>
-    </div>
-
-    <p class="product-item"> <span>Description: </span> {{ product.description }}</p>
-    <hr>
-
-    <p class="product-item"> <span>Category: </span> {{ product.category }}</p>
-    <hr>
-
-    <p class="product-item"> <span>Event Types: </span> {{ getEventTypes() }}</p>
-    <hr>
-
-    <p class="product-item"> <span>Location: </span> {{ product.location }}</p>
-    <hr>
-
-    <div class="product-price">
-      <span>Price: </span>
-      <span class="price" *ngIf="product.discount > 0">
-        <del>{{ product.price | currency }}</del> {{ (product.price - product.discount) | currency }}
-      </span>
-      <span class="price" *ngIf="product.discount === 0">
-        {{ product.price | currency }}
-      </span>
-    </div>
-
-    <div class="actions">
-      <p class="chat" (click)="chat()">You need more info? <br> Chat with us</p>
-      <button mat-button class="buy-btn" (click)="openBuyProductDialog()">Buy Product
-        <mat-icon>
-          shopping_cart
-        </mat-icon>
-      </button>
-    </div>
-  </div>
 </div>
 
 <div *ngIf="!isBlocked && !product" class="loading">
-  <p>Loading product details...</p>
+    <p>Loading product details...</p>
 </div>
