--- a/EventPlanner/src/app/details/rating/rating-dialog.component.html
+++ b/EventPlanner/src/app/details/rating/rating-dialog.component.html
@@ -4,13 +4,17 @@
     </div>
 
     <h2 class="success-title">Purchase Success!</h2>
-    <h3 class="price">EUR {{ product.price }}</h3>
+    <h3 class="price">
+        EUR {{ product === null ? service.price : product.price }}
+    </h3>
 
     <hr class="line" />
 
     <div class="info-row">
         <span>Service</span>
-        <span>{{ product.category }}</span>
+        <span>{{
+            product === null ? service.category : product.category
+        }}</span>
     </div>
 
     <hr class="dashed" />
