[ADD] Agenda Is Working

--- a/EventPlanner/src/app/event-manager/edit-event/edit-event.component.html
+++ b/EventPlanner/src/app/event-manager/edit-event/edit-event.component.html
@@ -213,7 +213,13 @@
         </div>
 
         <div class="buttons">
-            <button mat-raised-button type="button">Update Agenda</button>
+            <button
+                [routerLink]="['/events/edit/agenda/' + id]"
+                mat-raised-button
+                type="button"
+            >
+                Agenda
+            </button>
             <button
                 [routerLink]="['/events/edit/budget-planning/' + id]"
                 mat-raised-button
