--- a/EventPlanner/src/app/event-manager/edit-event/edit-event.component.html
+++ b/EventPlanner/src/app/event-manager/edit-event/edit-event.component.html
@@ -228,12 +228,19 @@
                 Plan Budget
             </button>
             <button
-                [routerLink]="['/events/create/invites']"
+                [routerLink]="['/events/create/invites', id]"
                 mat-raised-button
                 type="button"
                 *ngIf="editEventForm.get('privacyType')?.value === 'PRIVATE'"
             >
                 Send Invites
+            </button>
+            <button
+                mat-raised-button
+                type="button"
+                (click)="downloadGuestList()"
+            >
+                Download Guest List (PDF)
             </button>
         </div>
 
