--- a/EventPlanner/src/app/details/purchase-product-dialog/purchase-product-dialog.component.html
+++ b/EventPlanner/src/app/details/purchase-product-dialog/purchase-product-dialog.component.html
@@ -3,7 +3,7 @@
 
     <div mat-dialog-content>
         <p>Select an event for this product:</p>
-        <mat-form-field appearance="fill" style="width: 100%">
+        <mat-form-field appearance="fill" id="event" style="width: 100%">
             <mat-label>Event</mat-label>
             <mat-select [formControl]="eventControl">
                 <mat-option *ngFor="let event of events" [value]="event">{{
@@ -26,6 +26,7 @@
             <mat-icon>cancel</mat-icon> Cancel
         </button>
         <button
+            id="buy-product"
             mat-raised-button
             color="primary"
             type="button"
