--- a/EventPlanner/src/app/details/product-details/product-details.component.html
+++ b/EventPlanner/src/app/details/product-details/product-details.component.html
@@ -71,8 +71,9 @@
                 >
                 <span *ngIf="!product.isAvailable">(Unavailable)</span>
             </div>
-            <button mat-fab class="favourite">
-                <mat-icon>favorite</mat-icon>
+            <button mat-fab class="favourite" (click)="toggleFavorite()">
+                <mat-icon *ngIf="isFavorite" style="color: red;">favorite</mat-icon>
+                <mat-icon *ngIf="!isFavorite">favorite</mat-icon>
             </button>
         </div>
         <div class="rating">
